# pssgen

./: .gitignore  CLAUDE.md  DECISIONS.md  DESIGN.md  README.md  Register_Map_Template_v0.5.xlsx  cli.py  config.py  cursor.md  gen_vplan.py  gen_vpr_v2.py  ir.py  orchestrator.py  pssgen_sds.docx  pyproject.toml
.claude/: settings.local.json
agents/: __init__.py  assertion_coverage_analyzer.py  closure_gen.py  code_coverage_analyzer.py  coverage_analyzer.py  coverage_reader.py  datasheet_gen.py  effort_controller.py  functional_coverage_analyzer.py  gap_agent.py  pss_gen.py  ral_gen.py  report_generator.py  results_collector.py  rtl_analyzer.py  scaffold_gen.py  sim_runner.py  state_manager.py  structure_gen.py  vsl_validator.py
checkers/: __init__.py  verifier.py
commands/: import_reqs.py
docs/: BelTech-STD-001_HDL-Style.md  BelTech-STD-003_UVM-Testbench_Style.md  BelTech-STD-006_File-Headers-Style.md  BelTech_STD-003_UVM-Testbench_Style.md  make_regmap_template.py  phase2_gaps.md  pssgen_regmap_template.xlsx  pssgen_sds.docx  pssgen_sds_v03.md  pssgen_vpr_template.xlsx  ral_session3_pending_fixes.md  validate_regmap.py
emitters/: __init__.py  generic_c.py  questa.py  vivado.py
parser/: __init__.py  context.py  dispatch.py  docx_req_parser.py  intent_parser.py  regmap_parser.py  req_parser.py  systemverilog.py  verilog.py  vhdl.py  vplan_parser.py
scripts/: hdl_check.sh
tests/: test_cae_integration.py  test_checker.py  test_closure_gen.py  test_code_coverage_analyzer.py  test_config.py  test_context.py  test_coverage_parser.py  test_coverage_reader.py  (+31 more)
(+223 files in other folders)
