[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pssgen"
version = "0.0.1"
description = "AI-driven PSS + UVM + C testbench generator"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "anthropic>=0.30",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring ANTHROPIC_API_KEY and optional xvlog",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
pssgen = "cli:main"
